--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <% include partials/_header %>
 </head>
 
 <body class="container">
-<header>
 
-</header>
+<p> This is the Database </p>
 <main>
   <ul> <% Object.keys(urls).forEach((key) => { %>
 
@@ -19,14 +19,14 @@
         </form>
       </li>
       <% }); %>
-      <% include partials/_header.ejs %>
+
   </ul>
-    <a href= "http://localhost:8080/urls/show"> Click me!</a>
+    <a href= "http://localhost:8080/urls/show"> Follow me to submit your URL!</a>
 
 <divclass="jumbotron">
 
 
-<h1>This is great</h1>
+<h1>very very tiny</h1>
 
 <ul>
     </ul>
