--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -5,7 +5,7 @@
 
 <body class="container">
 
-  <% include partials/_header.ejs %>
+   <% include partials/_header %>
 
 <main>
 
@@ -13,7 +13,7 @@
 <div class="jumbotron">
 
 
-<h1>Let's show some short urls</h1>
+<h1>hello, i am the tiniest app</h1>
 
 <ul>
     </ul>
