fixes redirect bug to urls/show

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -21,7 +21,7 @@
       <% }); %>
 
   </ul>
-    <a href= "http://localhost:8080/urls/show"> Follow me to submit your URL!</a>
+    <a href= "http://localhost:8080/urls/new"> Follow me to submit your URL!</a>
 
 <divclass="jumbotron">
 
