--- a/views/urls_new.ejs
+++ b/views/urls_new.ejs
@@ -7,6 +7,7 @@
       <label for="longURL">Enter a URL:</label>
       <input id="longURL" type="text" name="longURL" placeholder="http://" style="width: 300px">
       <input type="submit" value="Submit">
+        <a href= "http://localhost:8080/urls"> Return to your Index</a>
     </form>
   </body>
 </html>
